# opencv_sandbox

./: CMakeLists.txt  Makefile  color_range_estimation  main.cpp  main_sandbox.cpp
includes/: Corner.class.hpp  Cube.class.hpp  OpenCvHandler.class.hpp  Piece.class.hpp  enum.hpp
src/: Cube.algo.class.cpp  Cube.algofirst.class.cpp  Cube.class.cpp  Cube.class.hpp  Npuzzle.class.cpp  OpenCvHandler.class.cpp  Piece.class.cpp  main.cpp
